# Nuzlocke-Companion

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: ADR-0001-product-direction.md  ARCHITECTURE.md  CAPTURE.md  MVP_SCOPE.md  PRODUCT_BRIEF.md  QA_GAME_LIBRARY_FLOW.md  ROADMAP.md  UI_UX_SPEC.md  USER_SETUP.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/emulation/: audio.rs  commands.rs  environment.rs  input.rs  libretro_ffi.rs  libretro_host.rs  mod.rs  saves.rs  state.rs  types.rs  video.rs
src/app/: App.tsx  initialRunState.ts
src/components/edit/: QuickEditPanel.tsx
src/components/emulator/: EmulatorConfigPanel.tsx  InternalRuntimeDisplayController.tsx  InternalRuntimeFramePreview.tsx
src/components/layout/: GameplayFrame.tsx  InternalPlaySidePanel.tsx
src/components/status/: BadgePanel.tsx  CaptureStatusPanel.tsx  LevelCapPanel.tsx  LivesCounter.tsx  (+1 more)
src/data/: gamePacks.ts  pokemonGameCatalog.ts  sampleRun.ts
src/screens/: CreateRunScreen.tsx  HomeScreen.tsx  MainPlayScreen.tsx  MyRunsScreen.tsx  OverlayScreen.tsx
src/shared/: types.ts  visualTypes.ts
src/utils/: captureStatusLabels.ts  createRunState.ts  emulatorCommands.ts  internalInputMapping.ts  internalRuntimeCommands.ts  internalRuntimePreferences.ts  overlayActions.ts  pokemonRomLibrary.ts  runLibraryStorage.ts  runStateActions.ts  runStateClone.ts  runStateValidation.ts  runStorage.ts  runtimeConfig.ts
(+5 files in other folders)
