[package]
name = "nuzlocke-companion"
version = "0.1.0"
description = "A desktop companion app for Pokemon Nuzlocke players."
authors = ["Nuzlocke Companion"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "nuzlocke_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
rfd = "0.15"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
windows-capture = "2.0.0"
